# GamingOverlay

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
.github/workflows/: release.yml
docs/: OPERATIONS.md  PLUGIN_WIDGETS.md
launcher/: Launcher.sln
launcher/Launcher/: App.xaml  App.xaml.cs  Launcher.csproj  MainWindow.xaml  MainWindow.xaml.cs  appsettings.json
launcher/Launcher/Services/: LauncherSettings.cs  OverlayProcessSupervisor.cs  UpdateProgress.cs  UpdateService.cs  VersionManifest.cs
overlay/: CMakeLists.txt
overlay/assets/: config.json  theme.json
overlay/include/Overlay/: App.h  CrashHandler.h  Dx11Renderer.h  Hotkeys.h  Log.h  Win32Window.h
overlay/include/Overlay/Config/: ConfigManager.h  OverlayConfig.h
overlay/include/Overlay/Hook/: PresentHook.h
overlay/include/Overlay/Telemetry/: GpuProvider.h  MetricSnapshot.h  PdhSampler.h  PresentMonClient.h  TelemetryService.h
overlay/include/Overlay/Widgets/: IWidget.h  PluginLoader.h  StockWidgets.h  WidgetRegistry.h
overlay/src/: App.cpp  CrashHandler.cpp  Dx11Renderer.cpp  Hotkeys.cpp  Log.cpp  Win32Window.cpp  main.cpp
overlay/src/Config/: ConfigManager.cpp
overlay/src/Hook/: PresentHook.cpp
overlay/src/Telemetry/: GpuProvider.cpp  PdhSampler.cpp  PresentMonClient.cpp  TelemetryService.cpp
overlay/src/Widgets/: CpuWidget.cpp  FpsWidget.cpp  FrametimeWidget.cpp  GpuWidget.cpp  NetworkWidget.cpp  PluginLoader.cpp  RamWidget.cpp  WidgetRegistry.cpp
releases/: README.md
scripts/: build-release.ps1
server/: README.md  changelog.txt  latest.json
setup/: installer.iss
